Test sin slogan y con imagen en navbar

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 		<!-- Lado derecho-->
 			<img src="Images/logo.png" alt="Logo Bazar Alphastudio">
 		</div>
-		<div class="headerLeft">
+		<div>
 		<!-- Lado izquierdo-->
-			<p></p>
+			<img scr="https://images.unsplash.com/photo-1540221652346-e5dd6b50f3e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=749&q=80"> 
 		</div>
 	</header>
 	<section>
