--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 	<!-- Seccion de bienvenida-->
 	<header class="menuPrincipal">
-		<nav>
+		<nav class="navimg">
 		<!-- Enlaces-->
 		<div class=" menuprincipalGrid menuPrincipal a">
 			
