--- a/Pages/Produtos.html
+++ b/Pages/Produtos.html
@@ -28,7 +28,7 @@
 <body>
     <!-- Seccion de bienvenida-->
 	<header class="menuPrincipal">
-		<nav>
+		<nav class="navimg">
 		<!-- Enlaces-->
 		<div class=" menuprincipalGrid menuPrincipal a">
 			
