--- a/Pages/Contato.html
+++ b/Pages/Contato.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +29,7 @@
 <body>
     <!-- Seccion de bienvenida-->
 	<header class="menuPrincipal">
-		<nav>
+		<nav class="navimg">
 		<!-- Enlaces-->
 		<div class=" menuprincipalGrid menuPrincipal a">
 			
@@ -49,42 +52,52 @@
 	</header>
     <section>
         <!--Contato-->
-            <h1 class="tituloPrincipal">Contato</h1>
-	</section>>
+            <h1 class="tituloPrincipal2">Contato</h1>
+	</section>
+
+
 			<!--Formulario Contacto-->
-			<section class="contactForm">
+
+			<div class="container contactForm">
+				<h2>Informação de Contato</h2>
 				<form>
-					<fieldset>
-						<legend class="legendForm">Informação de Contato</legend> <br>
-						<label class="labelForm" for="contacto">Por favor ingresse a seguiente informacão, em breve nos comunicaremos com você.</label> <br>
-						<br>
-						<label class="labelForm">Nome</label>
-						<input class="inputForm" type="text" name="contacto"/><br>
-						<br>
-						<label class="labelForm">Sobrenome</label>
-						<input class="inputForm" type="text" name="contacto"/> <br>
-						<br>
-						<label class="labelForm">Email</label>
-						<input class="inputForm" type="email" name="contacto"/> <br>
-						<br>
-						<select class="labelForm" name="contacto">
-							<option value="Soltero/a">Soteiro/a</option>
-							<option value="Casado/a">Casado/a</option>
-						</select><br>
-						<br>
-						<label class="labelForm">Deseja receber o Newsletter?</label>
-						<input type="checkbox" name="contacto"/> <br>
-						<br>
-						<textarea class="textAreaContacto" name="contacto" rows="10" cols="90">
-						Deixe seu comentario.
-						</textarea><br>
-						<br>
-						<input class="labelForm buttonContato" type="reset" name="contacto" value="Limpar Formulario" />
-						<input class="labelForm buttonContato" type="submit" name="contacto" value="Enviar Formulario" />
-					</fieldset>
-				</form>
-			</section>
-			<br>
+
+					<div class="form-group">
+						<label for="name">Nome</label>
+						<input type="text" class="form-control" id="name" placeholder="Ingrese Nome">
+					</div>
+
+					<div class="form-group">
+						<label for="lastname">Sobrenome</label>
+						<input type="text" class="form-control" id="lastname" placeholder="Ingrese Sobrenome">
+					</div>
+
+					<div class="form-group">
+					  <label for="email">Endereço de Email</label>
+					  <input type="email" class="form-control" id="email" placeholder="Ingrese seu email">
+					</div>
+
+					<div class="form-group form-check">
+					  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+					  <label class="form-check-label" for="exampleCheck1">Aceito receber novidades</label>
+					</div>
+					<button type="submit" class="btn btn-primary">Enviar</button>
+				  </form>
+			</div>
+
+			<div class="container">
+				<div class="row">
+				  <div class="col-sm">
+					<img src="https://images.unsplash.com/photo-1619752415757-83bf8b6fcf0d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=506&q=80" alt="Imagen Bazar Alphastudio">
+				  </div>
+				  <div class="col-sm">
+					<img src="https://images.unsplash.com/photo-1593032457866-e5557a37f5f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Imagen Bazar Alphastudio">
+				  </div>
+				  
+				</div>
+			  </div>
+
+		
 				
 			<footer class="footer">
 				<div class="footerGrid">
@@ -96,6 +109,8 @@
 				<!-- Derechos Autor-->
 				<p class="footerGridP1 footerSocialP">Todos os direitos reservados. Bazar Alphastudio.</p>
 				</div>	
-			</footer>	
+			</footer>
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html>
