--- a/Pages/Novidades.html
+++ b/Pages/Novidades.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +29,7 @@
 <body>
    <!-- Seccion de bienvenida-->
    <header class="menuPrincipal">
-	<nav>
+	<nav class="navimg">
 	<!-- Enlaces-->
 	<div class=" menuprincipalGrid menuPrincipal a">
 
@@ -48,7 +51,7 @@
 	</div>
 </header>
     <!--Novidades-->
-    <h1 class="tituloPrincipal">Novidades</h1>
+    <h1 class="tituloPrincipal2">Novidades</h1>
 	<br>
 	<h2>De uma olhadinha na nova coleção inverno 2021</h2>
 	<br>
@@ -73,6 +76,8 @@
 		<!-- Derechos Autor-->
 		<p class="footerGridP1 footerSocialP">Todos os direitos reservados. Bazar Alphastudio.</p>
 		</div>	
-	</footer>	
+	</footer>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>	
 </body>
 </html>
