--- a/Pages/Produtos.html
+++ b/Pages/Produtos.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +31,7 @@
 <body>
     <!-- Seccion de bienvenida-->
 	<header class="menuPrincipal">
-		<nav>
+		<nav class="navimg">
 		<!-- Enlaces-->
 		<div class=" menuprincipalGrid menuPrincipal a">
 			
@@ -50,7 +53,7 @@
 		</div>
 	</header>    
         <!--Produtos-->
-        <h1 class="tituloPrincipal">Produtos</h1>
+        <h1 class="tituloPrincipal2">Produtos</h1>
 		<br>
 		<div>
 		<h2>OFERTAS  -  MULHER  -  HOMEM  -  KIDS</h2>
@@ -83,7 +86,7 @@
 					</table>
 						<p style="color: firebrick; margin: 4px;">Preço: R$ 300</p>
 			<div class="buttonCompraGrid">
-				<button class="buttonCompra">Comprar</button>
+				<button type="button" class="btn btn-primary">Comprar</button>
 			</div>
 			</article>
 			<article    class="ofertas">
@@ -112,7 +115,7 @@
 					</table>
 						<p style="color: firebrick; margin: 4px;">Preço: R$ 100</p>
 				<div class="buttonCompraGrid">
-						<button class="buttonCompra">Comprar</button>
+					<button type="button" class="btn btn-primary">Comprar</button>
 				</div>
 			</article>
 			<br>
@@ -130,5 +133,7 @@
 		<p class="footerGridP1 footerSocialP">Todos os direitos reservados. Bazar Alphastudio.</p>
 		</div>	
 	</footer>	
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html>
