Con Flyers en el inicio

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	<!--Carousel-->
 
-	<div id="carouselInicio" class="carousel slide" data-ride="carousel">
+	<div id="carouselInicio" class="carousel slide imagenCarousel" data-ride="carousel">
 		<div class="carousel-inner">
 		  <div class="carousel-item active" data-interval="2000">
 			  <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="d-block w-100" alt="Imagen Bazar Alphastudio">
@@ -72,16 +72,19 @@
 			<img src="https://images.unsplash.com/photo-1490132328392-e6ef54a90dda?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80" class="d-block w-100" alt="Imagen Bazar Alphastudio">
 		  </div>
 		</div>
-	  </div>
+	</div>
 	 
 
-	  <div class="flyer">
-		<div>
-		<img class="flyerImg" src="Images/flyerpromo1.gif" alt="flyerpromo1">
+	  <div class="flyerGrid">
+		
+		<div class="flyerGrid1">
+		<img  class="imageFlyer" src="Images/flyerpromo1.gif" alt="flyerpromo1">
 		</div>
-		<div>
-		<img class="flyerImg" src="Images/flyerpromo2.gif" alt="flyerpromo1">
+
+		<div class="flyerGrid2">
+		<img  class="imageFlyer" src="Images/flyerpromo2.gif" alt="flyerpromo1">
 		</div>
+
 	  </div>
 
 
