Aplicado varios cambios Bootstrap y Responsive

--- a/Pages/Contato.html
+++ b/Pages/Contato.html
@@ -45,15 +45,20 @@
 		<!-- Lado derecho-->
 			<img src="../Images/logo.png" alt="Logo Bazar Alphastudio">
 		</div>
-		<div class="headerLeft">
+
 		<!-- Lado izquierdo-->
-			<p>Bazar Alphastudio, qualidade e preço justo</p>
+		<div class="headerleftGrid">
+			<p class="headerLeftGridText">Bazar Alphastudio, qualidade e preço justo</p>
 		</div>
+
 	</header>
-    <section>
-        <!--Contato-->
-            <h1 class="tituloPrincipal2">Contato</h1>
-	</section>
+	<div class="tituloPrincipalGrid">
+
+		<h1 class="tituloPrincipalGridText">Contato</h1>
+
+
+
+	</div>
 
 
 			<!--Formulario Contacto-->
@@ -88,10 +93,10 @@
 			<div class="container">
 				<div class="row">
 				  <div class="col-sm">
-					<img src="https://images.unsplash.com/photo-1619752415757-83bf8b6fcf0d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=506&q=80" alt="Imagen Bazar Alphastudio">
+					<img class="imageGaleria" src="https://images.unsplash.com/photo-1619752415757-83bf8b6fcf0d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=506&q=80" alt="Imagen Bazar Alphastudio">
 				  </div>
 				  <div class="col-sm">
-					<img src="https://images.unsplash.com/photo-1593032457866-e5557a37f5f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Imagen Bazar Alphastudio">
+					<img class="imageGaleria" src="https://images.unsplash.com/photo-1593032457866-e5557a37f5f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Imagen Bazar Alphastudio">
 				  </div>
 				  
 				</div>
