--- a/Pages/Novidades.html
+++ b/Pages/Novidades.html
@@ -45,14 +45,27 @@
 	<!-- Lado derecho-->
 		<img src="../Images/logo.png" alt="Logo Bazar Alphastudio">
 	</div>
-	<div class="headerLeft">
+
 	<!-- Lado izquierdo-->
-		<p>Bazar Alphastudio, qualidade e preço justo</p>
+    <div class="headerleftGrid">
+		<p class="headerLeftGridText">Bazar Alphastudio, qualidade e preço justo</p>
 	</div>
+
+
+
 </header>
-    <!--Novidades-->
-    <h1 class="tituloPrincipal2">Novidades</h1>
-	<br>
+    
+
+
+	<div class="tituloPrincipalGrid">
+
+		<h1 class="tituloPrincipalGridText">Novidades</h1>
+
+
+
+	</div>
+
+
 	<h2>De uma olhadinha na nova coleção inverno 2021</h2>
 	<br>
 	<section class="flexSectionNovedades">
