--- a/Pages/Produtos.html
+++ b/Pages/Produtos.html
@@ -47,14 +47,24 @@
 		<!-- Lado derecho-->
 			<img src="../Images/logo.png" alt="Logo Bazar Alphastudio">
 		</div>
-		<div class="headerLeft">
+		
+
 		<!-- Lado izquierdo-->
-			<p>Bazar Alphastudio, qualidade e preço justo</p>
+		<div class="headerleftGrid">
+			<p class="headerLeftGridText">Bazar Alphastudio, qualidade e preço justo</p>
 		</div>
-	</header>    
-        <!--Produtos-->
-        <h1 class="tituloPrincipal2">Produtos</h1>
-		<br>
+
+	</header>
+
+
+	<div class="tituloPrincipalGrid">
+
+		<h1 class="tituloPrincipalGridText">Produtos</h1>
+
+
+
+	</div>
+
 		<div>
 		<h2>OFERTAS  -  MULHER  -  HOMEM  -  KIDS</h2>
 		<br>
