Test de codigo con bootstrap

--- a/index.html
+++ b/index.html
@@ -45,17 +45,31 @@
 			
 		</div>
 		</nav>
-		<div class="headerRight">
-		<!-- Lado derecho-->
-			<img src="Images/logo.png" alt="Logo Bazar Alphastudio">
-		</div>
 		
+		<!-- Lado derecho
+			<div class="headerRight">
+			
+				<img src="Images/logo.png" alt="Logo Bazar Alphastudio">
+			</div>
+		-->
 	
-		<!-- Lado izquierdo-->
+		<!-- Lado izquierdo
         <div class="headerleftGrid">
 			<p class="headerLeftGridText">Bazar Alphastudio, qualidade e preço justo</p>
 		</div>
-	
+		-->
+
+		<div class="container">
+			<div class="row">
+				<div class="col-sm headerleftGridBoot ">
+				<img  class="headerLeftGridText">Bazar Alphastudio, qualidade e preço justo</p>
+				</div>
+			
+				<div class="col-sm headerRightGridBoot">
+				<img  class="headerLogoGrid" src="Images/logo.png" alt="Logo Bazar Alphastudio">
+				</div>
+			</div>
+		</div>
 	
 	
 	</header>
