--- a/Pages/Contato.html
+++ b/Pages/Contato.html
@@ -29,7 +29,7 @@
 <body>
     <!-- Seccion de bienvenida-->
 	<header class="menuPrincipal">
-		<nav class="navimg">
+		<nav class="navbar navimg">
 		<!-- Enlaces-->
 		<div class=" menuprincipalGrid menuPrincipal a">
 			
