--- a/Pages/Produtos.html
+++ b/Pages/Produtos.html
@@ -31,7 +31,7 @@
 <body>
     <!-- Seccion de bienvenida-->
 	<header class="menuPrincipal">
-		<nav class="navimg">
+		<nav class="navbar navimg">
 		<!-- Enlaces-->
 		<div class=" menuprincipalGrid menuPrincipal a">
 			
