--- a/Pages/Novidades.html
+++ b/Pages/Novidades.html
@@ -65,37 +65,20 @@
 
 	</div>
 
-	<div class="container-fluid">
-
 	<h2>De uma olhadinha na nova coleção inverno 2021</h2>
-	
-	</div>
-	
-
-<div class="row">
-
-	<div class="col-sm">
-		
+	<br>
+	<section class="flexSectionNovedades">
+		<article class="Novedades">
 				<img class="imagenNovidades" src="https://images.unsplash.com/photo-1516762689617-e1cffcef479d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=354&q=80" alt="Coleccion Invierno 2021 a">
-		
-	</div>
-
-	<div class="col-sm">
-		
+		</article>
+		<article class="Novedades">	
 				<img class="imagenNovidades" src="https://images.unsplash.com/photo-1562157873-818bc0726f68?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80" alt="Colecion Invierno 2021 b">
-		
-	</div>
-
-	<div class="col-sm">
-		
+		</article>
+		<article class="Novedades">	
 				<img class="imagenNovidades" src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Coleccion Invierno 2021 c">
-		
-	</div>
-
-
-	
-
-</div>  
+		</article>
+	</section>	
+    
 	
 	<footer class="footer">
 
