--- a/Pages/Novidades.html
+++ b/Pages/Novidades.html
@@ -76,22 +76,22 @@
 	</div>
 
 
-<!--
-	<h2>De uma olhadinha na nova coleção inverno 2021</h2>
--->
 
-	<br>
-	<section class="flexSectionNovedades">
-		<article class="Novedades">
-				<img class="imagenNovidades" src="https://images.unsplash.com/photo-1516762689617-e1cffcef479d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=354&q=80" alt="Coleccion Invierno 2021 a">
-		</article>
-		<article class="Novedades">	
-				<img class="imagenNovidades" src="https://images.unsplash.com/photo-1562157873-818bc0726f68?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80" alt="Colecion Invierno 2021 b">
-		</article>
-		<article class="Novedades">	
-				<img class="imagenNovidades" src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Coleccion Invierno 2021 c">
-		</article>
-	</section>	
+	<!--Seccion Novedades-->
+	
+	<div class="flexSectionNovedades">
+		
+			<div class="Novedades">
+					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1516762689617-e1cffcef479d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=354&q=80" alt="Coleccion Invierno 2021 a">
+			</div>
+			<div class="Novedades">	
+					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1562157873-818bc0726f68?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80" alt="Colecion Invierno 2021 b">
+			</div>
+			<div class="Novedades">	
+					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Coleccion Invierno 2021 c">
+			</div>
+		
+	</div>	
     
 	
 	<footer class="footer">
@@ -110,6 +110,6 @@
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>	
 </body>
 </html>
