--- a/Pages/Contato.html
+++ b/Pages/Contato.html
@@ -16,7 +16,11 @@
 
 	<link rel="shortcut icon" href="../Images/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="Images/favicon.ico" type="image/x-icon">
-    <title>Bazar Alphastudio</title>
+    
+	<!--SEO-->
+	<title>Bazar Alphastudio</title>
+
+	<meta name="Bazar Alphastudio" content="No Bazar Alphastudio você encontrara roupas femininas e masculinas de qualidade e com melhor preço. Entre e confira. Aproveite!">
 
 	<!--Fonts-->
 
@@ -47,7 +51,7 @@
 		</nav>
 		<div class="headerRight">
 		<!-- Lado derecho-->
-			<img src="../Images/logo.png" alt="Logo Bazar Alphastudio">
+			<img src="../Images/logo.png" alt="Bazar Alphastudio">
 		</div>
 
 		<!-- Lado izquierdo-->
@@ -97,10 +101,10 @@
 			<div class="container">
 				<div class="row">
 				  <div class="col-sm">
-					<img class="imageGaleria" src="https://images.unsplash.com/photo-1619752415757-83bf8b6fcf0d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=506&q=80" alt="Imagen Bazar Alphastudio">
+					<img class="imageGaleria" src="https://images.unsplash.com/photo-1619752415757-83bf8b6fcf0d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=506&q=80" alt="Bazar Alphastudio">
 				  </div>
 				  <div class="col-sm">
-					<img class="imageGaleria" src="https://images.unsplash.com/photo-1593032457866-e5557a37f5f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Imagen Bazar Alphastudio">
+					<img class="imageGaleria" src="https://images.unsplash.com/photo-1593032457866-e5557a37f5f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Bazar Alphastudio">
 				  </div>
 				  
 				</div>
