--- a/Pages/Novidades.html
+++ b/Pages/Novidades.html
@@ -22,7 +22,11 @@
 
 	<link rel="shortcut icon" href="../Images/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="Images/favicon.ico" type="image/x-icon">
-    <title>Bazar Alphastudio</title>
+
+	<!--SEO-->
+	<title>Bazar Alphastudio</title>
+
+	<meta name="Bazar Alphastudio" content="No Bazar Alphastudio você encontrara roupas femininas e masculinas de qualidade e com melhor preço. Entre e confira. Aproveite!">
 
 	<!--Fonts-->
 
@@ -53,7 +57,7 @@
 	</nav>
 	<div class="headerRight">
 	<!-- Lado derecho-->
-		<img src="../Images/logo.png" alt="Logo Bazar Alphastudio">
+		<img src="../Images/logo.png" alt="Bazar Alphastudio">
 	</div>
 
 	<!-- Lado izquierdo-->
@@ -76,7 +80,7 @@
 	
 
 	<div class="container-fluid">				
-		<h2 class="animate__animated animate__pulse animate__infinite	infinite animate__slow">De uma olhadinha na nova coleção inverno 2021</h2>
+		<h2 class="animate__animated animate__pulse animate__infinite	infinite animate__slow">De uma olhadinha na nova coleção inverno 2021 de Bazar Alphastudio</h2>
 	</div>
 
 
@@ -86,13 +90,13 @@
 	<div class="flexSectionNovedades">
 		
 			<div class="Novedades">
-					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1516762689617-e1cffcef479d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=354&q=80" alt="Coleccion Invierno 2021 a">
+					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1516762689617-e1cffcef479d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=354&q=80" alt="Coleccion Invierno Bazar Alphastudio">
 			</div>
 			<div class="Novedades">	
-					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1562157873-818bc0726f68?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80" alt="Colecion Invierno 2021 b">
+					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1562157873-818bc0726f68?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80" alt="Coleccion Invierno Bazar Alphastudio">
 			</div>
 			<div class="Novedades">	
-					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Coleccion Invierno 2021 c">
+					<img class="imagenNovidades" src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Coleccion Invierno Bazar Alphastudio">
 			</div>
 		
 	</div>	
