--- a/Pages/Produtos.html
+++ b/Pages/Produtos.html
@@ -18,7 +18,11 @@
 	<!--Favicon-->
 	<link rel="shortcut icon" href="../Images/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="Images/favicon.ico" type="image/x-icon">
-    <title>Bazar Alphastudio</title>
+
+	<!--SEO-->
+	<title>Bazar Alphastudio</title>
+
+	<meta name="Bazar Alphastudio" content="No Bazar Alphastudio você encontrara roupas femininas e masculinas de qualidade e com melhor preço. Entre e confira. Aproveite!">
 
 	<!--Fonts-->
 
@@ -49,7 +53,7 @@
 		</nav>
 		<div class="headerRight">
 		<!-- Lado derecho-->
-			<img src="../Images/logo.png" alt="Logo Bazar Alphastudio">
+			<img src="../Images/logo.png" alt="Bazar Alphastudio">
 		</div>
 		
 
@@ -80,21 +84,21 @@
 	<div    class="col-sm">
 		
 					<div class="container">
-					<h3>Oferta 1</h3>
+					<h3>Conjunto Casual</h3>
 					</div>
 					<div class="container imagenOferta">
-					<img class="imagenOferta" src="https://images.unsplash.com/photo-1467043237213-65f2da53396f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="Oferta Producto 1">			
+					<img class="imagenOferta" src="https://images.unsplash.com/photo-1467043237213-65f2da53396f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="Oferta Producto Bazar Alphastudio">			
 					</div>
 					<br>
 					<br>	
-					<table>
+					<table class="table table-hover table table-sm">
 							<tr>
 								<th> Nome do Produto</th>
 								<th> Data de Lançamento</th>
 								<th> Descripção do Produto</th>
 							</tr>
 							<tr>
-								<td>Kit verão</td>
+								<td>Conjunto Casual</td>
 								<td>21/12/2020</td>
 								<td>
 									<ul>
@@ -117,21 +121,21 @@
 	<div    class="col-sm">
 			
 					<div class="container">
-					<h3>Oferta 2</h3>
+					<h3>Camisa Feminina</h3>
 					</div>
 					<div class="container imagenOferta">				
-					<img src="https://images.unsplash.com/photo-1434389677669-e08b4cac3105?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=349&q=80" alt="Oferta Producto 2">
+					<img src="https://images.unsplash.com/photo-1434389677669-e08b4cac3105?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=349&q=80" alt="Oferta Producto Bazar Alphastudio">
 					</div>
 					<br>
 					<br>
-						<table>
+						<table class="table table-hover table table-sm">
 								<tr>
 									<th> Nome do Produto</th>
 									<th> Data de Lançamento</th>
 									<th> Descripção do Produto</th>
 								</tr>
 								<tr>
-									<td>Camisa feminina</td>
+									<td>Camisa Feminina</td>
 									<td>10/04/2021</td>
 									<td>
 										<ul class="colorol">
