--- a/Pages/SobreNos.html
+++ b/Pages/SobreNos.html
@@ -16,7 +16,11 @@
 
 	<link rel="shortcut icon" href="../Images/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="Images/favicon.ico" type="image/x-icon">
-    <title>Bazar Alphastudio</title>
+
+    <!--SEO-->
+	<title>Bazar Alphastudio</title>
+
+	<meta name="Bazar Alphastudio" content="No Bazar Alphastudio você encontrara roupas femininas e masculinas de qualidade e com melhor preço. Entre e confira. Aproveite!">
 
     <!--Fonts-->
 
@@ -47,7 +51,7 @@
 		</nav>
 		<div class="headerRight">
 		<!-- Lado derecho-->
-			<img src="../Images/logo.png" alt="Logo Bazar Alphastudio">
+			<img src="../Images/logo.png" alt="Bazar Alphastudio">
         </div>
 
 
@@ -60,10 +64,7 @@
 
 	</header>
         
-                <!--Sobre 
-                <h1 class="tituloPrincipal2">Sobre Nós</h1>
-                Nos-->
-
+               
                 <div class="tituloPrincipalGrid">
 
                     <h1 class="tituloPrincipalGridText">Sobre Nós</h1>
