Commit Entrega Final V2.0

--- a/Pages/Produtos.html
+++ b/Pages/Produtos.html
@@ -409,6 +409,19 @@
 </div>
 <br>
 
+<div class="container-fluid">
+	<div class="card1">
+			<h4>Fique ligado nas nossas redes sociais, temos muitas novidades para você no Bazar Alphastudio.</h4>
+	  <a href="../Pages/Novidades.html" class="btn btn-primary">Ir para Novidades</a>
+	</div>
+</div>
+
+
+
+
+
+
+
 	  <!--Footer-->
         
     
