--- a/index.html
+++ b/index.html
@@ -106,26 +106,9 @@
 		  </div>
 		</div>
 	</div>
-	 
+	
 
-	<!--Flyers
-
-	  <div class="container flyerGrid">
-		<div class="row">
-			<div class="col-sm flyerGrid1">
-				<img  class="imageFlyer rounded" src="Images/flyerpromo1.gif" alt="Promoção Bazar Alphastudio">
-			</div>
-
-			<div class="col-sm flyerGrid2">
-				<img  class="imageFlyer rounded" src="Images/flyerpromo2.gif" alt="Promoção Bazar Alphastudio">
-			</div>
-
-		</div>
-	  </div>
-
-	-->
-
-	<!--Promo Verano-->-->
+	<!--Promo Verano-->
 		<div class="container imagePromoVerano">
 			
 		<img class="img-fluid" src="Images/flyerpromo.gif" alt="Bazar Alphastudio">
@@ -405,11 +388,22 @@
 	</div>
 
 
+	<div class="container-fluid">
+		<div class="card1">
+				<h4>Fique ligado nas nossas redes sociais, temos muitas novidades para você no Bazar Alphastudio.</h4>
+		  <a href="Pages/Novidades.html" class="btn btn-primary">Ir para Novidades</a>
+		</div>
+	</div>
+
+
+
+
+<!--
 
 <div class=".h2Grid">
 	<h2 class="h2GridText h2S">Fique ligado nas nossas redes sociais, temos muitas novidades para você no Bazar Alphastudio.</h2>
 </div>
-
+-->
 
 <!--Footer-->
 	<div class="footer-basic footerImg">
