--- a/Pages/Novidades.html
+++ b/Pages/Novidades.html
@@ -88,9 +88,9 @@
 	<div class="flexSectionNovedades">
 
 
-		<div class="card " style="width: 18rem;">
+		<div class="card card1" style="width: 18rem;">
 			<img class="card-img-top" src="https://images.unsplash.com/photo-1610652492500-ded49ceeb378?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="Bazar Alphastudio">
-			<div class="card-body card1">
+			<div class="card-body">
 			<h5 class="card-title">Conjunto Masculino</h5>
 			<p class="card-text">Blazer azul e calza azul, combinando com gravata azul e camisa de algodão branca. Desenho moderno e elegante. Experimente.</p>
 			<a href="../Pages/Produtos.html" class="btn btn-primary">Comprar</a>
@@ -98,18 +98,18 @@
 		</div>
 
 
-		<div class="card " style="width: 18rem;">
+		<div class="card card1" style="width: 18rem;">
 			<img class="card-img-top" src="https://images.unsplash.com/photo-1603344797033-f0f4f587ab60?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="Bazar Alphastudio">
-			<div class="card-body card1">
+			<div class="card-body">
 			<h5 class="card-title">Look informal</h5>
 			<p class="card-text">Look bem relaxado, Composto por camisa beije e calza de algodão branca. Ideal para sair esses dias de inverno de sol na praia.</p>
 			<a href="../Pages/Produtos.html" class="btn btn-primary">Comprar</a>
 			</div>
 		</div>
 
-		<div class="card " style="width: 18rem;">
+		<div class="card card1" style="width: 18rem;">
 			<img class="card-img-top" src="https://images.unsplash.com/photo-1542825735-273f6f8eda1b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="Bazar Alphastudio">
-			<div class="card-body card1">
+			<div class="card-body">
 			<h5 class="card-title">Inverno Style</h5>
 			<p class="card-text">Jaqueta de coro preta, camisa preta de algodão e calza xadrez beije. Ideal para essas tardes de final de semana e a noite.</p>
 			<a href="../Pages/Produtos.html" class="btn btn-primary">Comprar</a>
